$Id: ChangeLog 2007/08/30 12:16:55 mallet $

MALJRL 1.3 released August 30th, 2007
	
	14. Fixed bug regarding the 4x4 matrix inversion.
	13. Completed installation documentation.
	12. Fix problem on vector3d::*= (previously performed a division).
	11. Added missing functions to be compatible to hpp Gik without t3d.	
	10. T3D package requires has to be >= 2.3 version

MALJRL version 1.2 released May 14, 2007

	9. Added some messages to configure script.

	8. Added #include "configMal.h" in MatrixAbstractLayer.h".

	7. At Makefile.am MatrixAbstractLayerT3D.h have been added and
	configMal.h have been deleted.

	6. The typedef have been defined in the:
	MatrixAbstractLayerBoost.h
	MatrixAbstractLayerVNL.h
	MatrixAbstractLayerSmallMatrix3x3Default.h,
	MatrixAbstractLayerSmallMatrix4x4Default.h,
	MatrixAbstractLayerSmallVector3Default.h,
	MatrixAbstractLayerSmallVector4Default.h,
	MatrixAbstractLayerT3D.h.

	5. The file MatrixAbstractLayerT3D.h have been created. This file
	has the macros to allow the use of T3D has smallVector and
	smallMatrix. 
	- The MAL_S4x4_* have been implemented using T3D. 
	- The MAL_S3_VECTOR* have been implemented by V3D.
	- The MAL_S4_VECTOR* have been implementd by V3D.
	- The MAL_S3x3_* have been implemented by the default Matrix3x3
	implementation (PatternGeneratorJRL::Matrix3x3<double>) (It shoud
	be changed by the R3D implementation once it'd been created).

	4. The <> of the includes of MatrixAbstractLayerBoost.h have been
	replaced by "". 

	3. The new macros added in (2) have been implemented in
	MatrixAbstractLayerSmallMatrix3x3Default.h,
	MatrixAbstractLayerSmallMatrix4x4Default.h,
	MatrixAbstractLayerSmallVector3Default.h,
	MatrixAbstractLayerSmallVector4Default.h.

	2. In MatrixAbstractLayerSmall.h have been added the documentation
	of five news macros to acces to the elements of a smallVector and
	of a smallMatrix: 
	MAL_S4x4_MATRIX_ACCESS_I(name,i),
	MAL_S4x4_MATRIX_ACCESS_I_J(name,i,j),