@@ -1,5 +1,7 @@
 $Id: ChangeLog 2007/08/30 12:16:55 mallet $
 
+	15. Added operator cross product in small vector 3d.
+	
 MALJRL 1.3 released August 30th, 2007
 	
 	14. Fixed bug regarding the 4x4 matrix inversion.
